--- a/EVIC/EVIC_Library/EVIC_Library.csproj
+++ b/EVIC/EVIC_Library/EVIC_Library.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0AB6EF6C-C920-4EDA-A631-982A3A95C9F1}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{9DBA288D-7DDC-4D78-A736-BAFCFB2F71C9}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EVIC_ConsoleApp</RootNamespace>
-    <AssemblyName>EVIC_ConsoleApp</AssemblyName>
+    <RootNamespace>EVIC_Library</RootNamespace>
+    <AssemblyName>EVIC_Library</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +22,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -43,19 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DashboardDisplay.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="Controller.cs" />
+    <Compile Include="Model.cs" />
+    <Compile Include="Odometer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Simulator.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\EVIC_Library\EVIC_Library.csproj">
-      <Project>{9dba288d-7ddc-4d78-a736-bafcfb2f71c9}</Project>
-      <Name>EVIC_Library</Name>
-    </ProjectReference>
+    <Compile Include="Temperature.cs" />
+    <Compile Include="Warnings.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
